2004-03-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/libconfig.h.in, include/pqxx/util.hxx, src/util.cxx:
  - Moved PQfreemem() and PQfreeNotify() calls out of header
  - Moved PQXX_HAVE_PQFREEMEM and PQXX_HAVE_PQFREENOTIFY out of header
  - Moved PQXX_HAVE_PQFREE* out of libconfig.h
 include/pqxx/result.hxx:
  - to_string() and from_string() templates for result::field
 include/pqxx/util.hxx, test/test*.cxx:
  - Test coverage for from_string() functions
  - Test coverage for to_string() functions
 test/test076.cxx:
  - New
  - Completes test coverage for from_string() and to_string()
 test/test077.cxx:
  - New
  - Tests result::swap()
2004-03-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx:
  - Included compiler.h instead of libcompiler.h, thanks Markus Bertheau
2004-03-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pqxx:
  - Included pqxx/result (though not really needed)
 include/pqxx/result.hxx, src/result.cxx:
  - Added swap()
 README:
  - Documented link command line for Unix-style compilers
  - Documented difference between "foo" and "foo.hxx" headers
2004-03-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx, include/pqxx/result.hxx,
 include/pqxx/tablewriter.hxx, src/binarystring.cxx, src/connection_base.cxx,
 src/cursor.cxx, src/largeobject.cxx, src/pipeline.cxx, src/result.cxx,
 src/robusttransaction.cxx, test/test*.cxx:
  - Replaced ToString() calls with to_string() (and same for FromString etc)
2004-03-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, src/util.cxx:
  - Implemented to_string() functions to replace ToString()
 tools/Makefile.am
  - rmlo and pqxxbench still built, but not installed; thanks Markus Bertheau
2004-03-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, include/pqxx/cursor.h:
  - Added "@deprecated" doxygen tag to classes
 include/pqxx/result.hxx, include/pqxx/util.hxx, src/util.cxx: